# logitech_modkey_rs

./: Cargo.toml  README.md  g15mappings.toml
src/: args.rs  client.rs  main.rs  server.rs
src/keyboards/: g15.rs  g19.rs  mod.rs
