[package]
name = "logitech_mod_keys_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
libusb = { git = "https://github.com/Rex-Sanchez/libusb-rs.git"}
unix_ipc_rs = {git = "https://github.com/Rex-Sanchez/unix_ipc_rs.git" }
virtual_keyboard_rs = {git = "https://github.com/Rex-Sanchez/virtual_keyboard_rs.git"  }
clap = { version = "4.5.13", features = ["derive"] }
users = "0.11.0"
bincode = "1.3.3"
toml = "0.8.19"

